erDiagram
    User ||--|| Person : is
    User ||--o{ Notification : has
    Person ||--|| Candidate : is
    User ||--|| Evaluator : is
    User ||--|| HR_Manager : is
    Candidate ||--|| CV : has
    Candidate ||--o{ Candidate_Phase : has
    Candidate ||--o{ Interview : participates
    Evaluator }o--o{ Interview : conducts
    Interview ||--o{ Appreciation : has
    Interview ||--|| Agenda : has
    Interview ||--|| Interview_Status : has
    HR_Manager ||--o{ Interview : manages
    HR_Manager }o--o{ Evaluator : collaborates

    User {
        int id PK
        string username
        string password
        string role
        string type
        int user_id FK
    }
    Person {
        string first_name
        string last_name
        string email
        string phone
    }
    Candidate {
        int id PK
        string address
        datetime hire_date
    }
    CV {
        int id PK
        string file_path
        int candidate_id FK
    }
    Evaluator {
        int id PK
        string specialization
    }
    Interview {
        int id PK
        datetime interview_date
        string interview_location
        int candidate_id FK
        int evaluator_id FK
        int hr_manager_id FK
    }
    Appreciation {
        int id PK
        string comment
        int score
        int interview_id FK
    }
    Agenda {
        int id PK
        datetime date
        datetime start_time
        datetime end_time
        string status
        string description
        int interview_id FK
    }
    HR_Manager {
        int id PK
        string department
        string position
    }
    Notification {
        int id PK
        string content
        datetime notification_date
        int user_id FK
    }
    Candidate_Phase {
        int id PK
        string phase
        datetime start_date
        datetime end_date
        string result
        int candidate_id FK
    }
    Interview_Status {
        int id PK
        string status
        datetime status_date
        int interview_id FK
    }